# CardExercise

./: .gitignore  CMakeLists.txt  CMakePresets.json  README.md
CardGame/: CMakeLists.txt  CardGame.cpp  CardGame.h
CardGame/Cards/: Cards.cpp  Cards.h
